tests/unit/ill-typed/mismatch.stella
language core;
extend with #unit-type;

fn ignore(_ : Nat) -> Nat {
  return unit
}